refactor: melhorando lógica do código para remover duplicidades e realocando pacotes